--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/hostel_complaint_db
 spring.datasource.username=root
-spring.datasource.password=Uchit@mysql
+spring.datasource.password=tejas@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
